CHANGELOG

corrected bug in do_farmer_fights
corrected login method
created CHANGELOG file